# Palladium

./: CMakeLists.txt
scene/: CubeTest.blend  TestScene.blend  TestScene.blend1  TestScene.mtl
shader/: Build.bat
shader/source/: GUIShader.glsl.frag  GUIShader.glsl.vert  TextShader.glsl.frag  TextShader.glsl.vert  shader.glsl.frag  shader.glsl.vert
source/: Application.cpp  Application.hpp  Axel.cpp  Axel.hpp  BetterType.cpp  BetterType.hpp  Camera.cpp  Camera.hpp  Core.cpp  Core.hpp  GUIManager.cpp  GUIManager.hpp  IDManager.cpp  IDManager.hpp  Main.cpp  PCH.hpp  Palladium.cpp  Recterer.cpp  Recterer.hpp  Texterer.cpp  Texterer.hpp
source/gui/: Button.cpp  Button.hpp  GUIManager.cpp  GUIManager.hpp  Label.cpp  Label.hpp
